# fribbe-status-checker

./: .dockerignore  .env.dev  .env.template  .env.test  .gitattributes  .gitignore  .htmlhintrc  .htmlhintrc-test  .markdownlint-cli2.yaml  .stylelintrc.json  Dockerfile  LICENSE  README.md  StatusCheckerService.py  app.py  cliff.toml  dev-requirements.txt  docker-compose.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  status-check.py  vitest.config.js
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.github/scripts/: coverage-comment.js  coverage-utils.js
.github/workflows/: ci-cd.yml  codeql.yml  coverity.yml  dependabot-auto-merge.yml
app/: MessageService.py  OccupancyService.py  StatusCheckerService.py  config.py  csrf.py  db.py  dependencies.py  env.py  format.py  licenses.json  main.py  version.py
app/api/: EphemeralAPIKeyHeader.py  EphemeralAPIKeyQuery.py  EphemeralAPIKeyStore.py  HybridAuth.py  Requests.py  Responses.py  Schema.py  access_role.py  ephemeral_api_key_header.py  ephemeral_api_key_store.py  hybrid_auth.py  redact.py  requests.py  responses.py  schema.py
app/html_templates/: empty.html  few.html  many.html
app/routers/: _page_utils.py  api_keys.py  auth.py  internal.py  misc.py  nav_context.py  notification_ui.py  notifications.py  pages.py  push.py  status.py  wardens.py
app/services/: DatetimeParser.py  ForecastStore.py  MacAddressHelper.py  MessageService.py  NotificationService.py  OccupancyRecordService.py  PersistentCollections.py  PersistentDict.py  PollingService.py  PresenceLevel.py  PresenceLevelService.py  PresenceThresholds.py  PushSender.py  PushSubscriptionService.py  StatusCheckerService.py  WeatherService.py  datetime_parser.py  mac_address_helper.py  message_service.py  notification_service.py  persistent_collections.py  polling_service.py  presence_level.py  presence_level_service.py  presence_thresholds.py  push_sender.py  push_subscription_service.py  virtual_day.py  weather_service.py
app/services/internal/: InternalService.py  Model.py  WardenStore.py  internal_service.py  model.py  warden_store.py
app/services/occupancy/: Model.py  Occupancy.py  OccupancyParser.py  OccupancyService.py  OccupancySource.py  OccupancyType.py  model.py  occupancy_parser.py  occupancy_service.py
app/static/: auth.html  index.html  manifest.json  notification-create.html  sw.js
app/static/css/: api-keys.styles.css  auth.styles.css  base.css  index.styles.css  legal.styles.css  notification-create.styles.css  preview.styles.css  shared.css  styles.css
app/static/js/: api-keys.js  app.js  auth.js  clipboard.js  csrf.js  notification-create.js  theme.js  toast.js
app/stores/: FileSessionStore.py  file_session_store.py
app/templates/: _floating_btn_group.html  _notification_items.html  _notification_preview_items.html  _preview_controls.html  _status_content.html  _theme_toggle.html  api-keys.html  auth.html  base.html  index.html  legal.html  notification-create.html  preview.html
app/templates/partials/: forecast.html
examples/: docker-compose.yml
html/: index.html
html_templates/: empty.html  few.html  many.html
scripts/: dev.py  generate_licenses.py  generate_vapid_keys.py  lint.py  migrate_json_to_db.py  release.py  test.py  test_push_notification.py  watch.py
test/: EpemeralAPIKeyHeaderTests.py  EphemeralAPIKeyStoreTests.py  OccupancyParserTests.py  OccupancyServiceTests.py  OccupancyTests.py  PersistentCollectionsTests.py  PersistentDictTests.py  occupancy_calendar_test_data.html  occupancy_weekly_test_data.html  test_utils.py
test/integration/: OccupancyServiceIntegrationTest.py  OccupationServiceIntegrationTest.py
tests/: DatetimeParserTests.py  DbTests.py  DependenciesTests.py  EnvTests.py  EpemeralAPIKeyHeaderTests.py  EpemeralAPIKeyStoreTests.py  FileSessionStoreTests.py  ForecastStoreTests.py  InternalServiceTests.py  MacAddressHelperTests.py  NotificationServiceTests.py  OccupancyParserTests.py  OccupancyRecordServiceTests.py  OccupancyServiceTests.py  PersistentCollectionsTests.py  PollingServiceTests.py  PresenceLevelServiceTests.py  PushSubscriptionServiceTests.py  RouterTests.py  VirtualDayTests.py  WardenStoreTests.py  WeatherServiceTests.py  access_role_tests.py  cliff_template_tests.py  config_tests.py  conftest.py  datetime_parser_tests.py  dependencies_tests.py  env_tests.py  ephemeral_api_key_store_tests.py  file_session_store_tests.py  format_tests.py  internal_service_tests.py  mac_address_helper_tests.py  message_service_tests.py  notification_service_tests.py  occupancy_parser_tests.py  occupancy_service_tests.py  occupancy_weekly_test_data.html  page_utils_tests.py  (+12 more)
tests/data/snapshots/occupancy_calendar/: 2026_07_21.html
tests/data/snapshots/occupancy_weekly/: 2026_07_21.html
tests/integration/: OccupancyServiceIntegrationTest.py  occupancy_service_integration_test.py
tests/js/: notifications.test.js
