[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fribbe-status-checker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "huawei-lte-api>=1.11.0",
    "fastapi[standard]>=0.115.12",
    "beautifulsoup4>=4.13.4",
    "dateparser>=1.2.1",
    "readerwriterlock>=1.0.9",
    "markdown>=3.8.2",
    "starlette-session>=0.4.3",
    "secure>=1.0.1",
]

[project.scripts]
lint = "scripts.lint:main"
dev = "scripts.dev:main"
watch = "scripts.watch:main"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.9.0",
    "pyright>=1.1.0",
    "pytest-dotenv>=0.5.2",
]

[tool.pytest.ini_options]
python_files = ["*Test.py", "*Tests.py", "*_test.py", "*_tests.py"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit (security)
    "C4",  # flake8-comprehensions
    "RUF", # ruff-specific rules
]
ignore = [
    "E501", # line too long (handled by formatter)
    "B008", # FastAPI uses Depends/Body/Query as argument defaults by design
    "S101", # assert is used in tests
]

[tool.hatch.build.targets.wheel]
packages = ["app", "scripts"]

[tool.uv]
package = true

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"


