[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fribbe-status-checker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "huawei-lte-api>=1.11.0",
    "fastapi[standard]>=0.115.12",
    "beautifulsoup4>=4.13.4",
    "dateparser>=1.2.1",
    "readerwriterlock>=1.0.9",
    "markdown>=3.8.2",
    "nh3>=0.2.21",
    "starsessions>=2.2.1",
    "starlette-csrf>=3.0.0",
    "secure>=1.0.1",
    "pywebpush>=2.3.0",
]

[project.scripts]
lint = "scripts.lint:main"
dev = "scripts.dev:main"
watch = "scripts.watch:main"
generate-vapid-keys = "scripts.generate_vapid_keys:main"
test-push-notification = "scripts.test_push_notification:main"
generate-licenses = "scripts.generate_licenses:main"


[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.9.0",
    "pyright>=1.1.0",
    "pytest-dotenv>=0.5.2",
    "pip-licenses>=5.5.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*Test.py", "*Tests.py", "*_test.py", "*_tests.py"]
env_files = [".env.test"]
env_override_existing_values = true
filterwarnings = [
    "error" # turn all warnings into errors
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit (security)
    "C4",  # flake8-comprehensions
    "RUF", # ruff-specific rules
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
    "TRY", # tryceratops
    "PTH", # flake8-use-pathlib
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # FastAPI uses Depends/Body/Query as argument defaults by design
    "S101",   # assert is used in tests
    "TRY002", # custom exception classes not required for internal errors
    "TRY003", # long exception messages in raise are fine
    "TRY300", # moving return into else block is a style preference
]

[tool.hatch.build.targets.wheel]
packages = ["app", "scripts"]

[tool.uv]
package = true

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"


