[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fribbe-status-checker"
version = "0.5.4"
requires-python = ">=3.12"
dependencies = [
    "huawei-lte-api>=1.11.0",
    "fastapi[standard]>=0.136.0",
    "beautifulsoup4>=4.14.3",
    "dateparser>=1.4.0",
    "readerwriterlock>=1.0.9",
    "markdown>=3.10.2",
    "nh3>=0.3.4",
    "starsessions>=2.2.1",
    "starlette-csrf>=3.0.0",
    "secure>=1.0.1",
    "pywebpush>=2.3.0",
]

[project.scripts]
lint = "scripts.lint:main"
test = "scripts.test:main"
dev = "scripts.dev:main"
generate-vapid-keys = "scripts.generate_vapid_keys:main"
test-push-notification = "scripts.test_push_notification:main"
generate-licenses = "scripts.generate_licenses:main"
release = "scripts.release:main"


[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.11",
    "pyright>=1.1.408",
    "pytest-dotenv>=0.5.2",
    "pip-licenses>=5.5.5",
    "python-dotenv>=1.0.0",
    "diff-cover>=9.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*Test.py", "*Tests.py", "*_test.py", "*_tests.py"]
env_files = [".env.test"]
env_override_existing_values = true
filterwarnings = [
    "error" # turn all warnings into errors
]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "scripts/*"]

[tool.ruff]
line-length = 120
exclude = [".venv", "node_modules"]
indent-width = 4

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pycodestyle]
max-line-length = 140

[tool.ruff.lint]
select = [
    "ALL" # all rules
]
ignore = [
    "COM812", # trailing comma missing — conflicts with formatter
    "D100", # missing docstring in public module
    "D104", # missing docstring in public package
    "D107", # missing docstring in __init__
    "D203", # one-blank-line-before-class — incompatible with D211
    "D213", # multi-line-summary-second-line — incompatible with D212
    "TRY300", # try consider else
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "BLE001", # Do not catch blind exception
    "S101", # assert detected
    "D100", # missing docstring in public module
    "D101", # missing docstring in public class
    "D102", # missing docstring in public method
    "D103", # missing docstring in public function
    "D104", # missing docstring in public package
    "D107", # missing docstring in __init__
    "SLF001", # private method accessed in test
    "PLR2004", # Magic value used in comparison
    "DTZ001", # datetime.datetime() used without timezone
    "DTZ005", # datetime.now() used without timezone
    "PT011", # too broad exception caught
    "EM101", # Exception must not use a string literal
    "FIX004", # Line contains HACK
    "ASYNC240", # sync pathlib I/O in async function — acceptable in tests
]
"scripts/*" = [
    "D103",    # missing docstring in public function
    "BLE001",  # Do not catch blind exception
    "T201",    # print found — scripts legitimately use print for progress output
    "S603",    # subprocess call: untrusted input — scripts call known commands (git, uv)
    "S607",    # partial executable path — git / uv are expected to be on PATH
    "S310",    # URL open: permitted schemes — URLs are hardcoded constants
    "PLR2004", # Magic value in comparison — len(argv) checks are self-evident
    "PLR0915", # Too many statements — procedural CLI scripts are intentionally flat
    "ANN401",  # Any disallowed — GitHub API JSON responses are inherently dynamic
    "C901",    # Too complex — procedural CLI scripts are intentionally flat
    "PLR0912", # Too many branches — dry-run guards add necessary branching
]
"app/services/persistent_collections.py" = [
    "ANN401", # Any required for generic serialization and Python descriptor protocol
]

[tool.hatch.build.targets.wheel]
packages = ["app", "scripts"]

[tool.uv]
package = true

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[[tool.pyright.executionEnvironments]]
root = "tests"
reportPrivateUsage = "none"
reportMissingTypeStubs = "none"


